Migrate messages to Cassandra, search to OpenSearch, and hot-path caches to Redis