@@ -3,17 +3,15 @@ package com.serdar.user.service;
 import com.serdar.user.client.AuthClient;
 import com.serdar.user.entity.UserProfile;
 import com.serdar.user.repository.UserProfileRepository;
+import com.serdar.user.search.UserSearchIndexService;
 import lombok.RequiredArgsConstructor;
 import org.springframework.stereotype.Service;
 
+import java.util.HashSet;
 import java.util.List;
 import java.util.Set;
 import java.util.stream.Collectors;
 
-/**
- * User half of the monolith's SearchService. Callers are filtered out of their
- * own results, as are users who have blocked them.
- */
 @Service
 @RequiredArgsConstructor
 public class SearchService {
@@ -22,26 +20,42 @@ public class SearchService {
     private final BlockService blockService;
     private final FriendService friendService;
     private final AuthClient authClient;
+    private final UserSearchIndexService searchIndex;
 
     public record UserSearchResult(UserProfile profile, int mutualCount) {}
 
     public List<UserSearchResult> searchUsers(long callerId, String keyword) {
         if (keyword == null || keyword.isBlank()) return List.of();
-        Set<Long> exclusions = blockService.whoBlocksMe(callerId).stream().collect(Collectors.toSet());
+
+        Set<Long> exclusions = new HashSet<>(blockService.whoBlocksMe(callerId));
         exclusions.add(callerId);
-        // Also filter out people the caller blocked.
-        blockService.myBlocks(callerId).forEach(b -> exclusions.add(b.getBlockedId()));
+        blockService.blockedByMeIdSet(callerId).forEach(exclusions::add);
 
         Set<Long> myFriends = Set.copyOf(friendService.listFriendIds(callerId));
 
-        return users.search(keyword).stream()
-                .filter(u -> !exclusions.contains(u.getId()))
+        List<Long> ids;
+        try {
+            ids = searchIndex.searchIds(keyword, 50);
+        } catch (Exception e) {
+            return users.search(keyword).stream()
+                    .filter(u -> !exclusions.contains(u.getId()))
+                    .filter(u -> !authClient.isFrozen(u.getId()))
+                    .map(u -> toResult(u, myFriends))
+                    .toList();
+        }
+
+        return ids.stream()
+                .filter(id -> !exclusions.contains(id))
+                .map(users::findById)
+                .flatMap(java.util.Optional::stream)
                 .filter(u -> !authClient.isFrozen(u.getId()))
-                .map(u -> {
-                    Set<Long> theirFriends = Set.copyOf(friendService.listFriendIds(u.getId()));
-                    int mutual = (int) theirFriends.stream().filter(myFriends::contains).count();
-                    return new UserSearchResult(u, mutual);
-                })
-                .toList();
+                .map(u -> toResult(u, myFriends))
+                .collect(Collectors.toList());
+    }
+
+    private UserSearchResult toResult(UserProfile u, Set<Long> myFriends) {
+        Set<Long> theirFriends = Set.copyOf(friendService.listFriendIds(u.getId()));
+        int mutual = (int) theirFriends.stream().filter(myFriends::contains).count();
+        return new UserSearchResult(u, mutual);
     }
 }
